# pettirosso

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/css/: style.css
design/attributions/: winterflower-bird-7181568.txt
src/: application.rs  domain.rs  main.rs  ui.rs
